ccl/parser/ccl_parser.go
// Code generated from CCL.g4 by ANTLR 4.9.2. DO NOT EDIT.

package parser // CCL

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var literalNames = []string{
	"", "'has'", "'with'", "'('", "')'", "'not'", "'empty'", "'now'", "'seconds'",
	"'days'", "'months'", "'in'", "'any'", "'all'", "'within'", "','", "'=='",
	"'!='", "'<='", "'<'", "'>'", "'>='", "'contains'", "'before'", "'after'",
	"'younger'", "'older'", "", "'true'", "'false'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "EqualsOperator",
	"NotEqualsOperator", "LessOrEqualsThanOperator", "LessThanOperator", "MoreThanOperator",
	"MoreOrEqualsThanOperator", "ContainsOperator", "BeforeOperator", "AfterOperator",
	"YoungerOperator", "OlderOperator", "BooleanLiteral", "True", "False",
	"Identifier", "IntNumber", "FloatNumber", "StringLiteral", "Whitespace",
}

var ruleNames = []string{
	"condition", "assetType", "simpleAssetType", "filteredAssetType", "field",
	"expression", "simpleExpression", "notExpression", "isEmptyExpression",
	"comparison", "binaryComparison", "timeComparison", "timeOperator", "nowOperator",
	"time", "unit", "inExpression", "scope", "withinExpression", "value", "operator",
}

type CCLParser struct {
	*antlr.BaseParser
}

// NewCCLParser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *CCLParser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewCCLParser(input antlr.TokenStream) *CCLParser {
	this := new(CCLParser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "CCL.g4"

	return this
}

// CCLParser tokens.
const (
	CCLParserEOF                      = antlr.TokenEOF
	CCLParserT__0                     = 1
	CCLParserT__1                     = 2
	CCLParserT__2                     = 3
	CCLParserT__3                     = 4
	CCLParserT__4                     = 5
	CCLParserT__5                     = 6
	CCLParserT__6                     = 7
	CCLParserT__7                     = 8
	CCLParserT__8                     = 9
	CCLParserT__9                     = 10
	CCLParserT__10                    = 11
	CCLParserT__11                    = 12
	CCLParserT__12                    = 13
	CCLParserT__13                    = 14
	CCLParserT__14                    = 15
	CCLParserEqualsOperator           = 16
	CCLParserNotEqualsOperator        = 17
	CCLParserLessOrEqualsThanOperator = 18
	CCLParserLessThanOperator         = 19
	CCLParserMoreThanOperator         = 20
	CCLParserMoreOrEqualsThanOperator = 21
	CCLParserContainsOperator         = 22
	CCLParserBeforeOperator           = 23
	CCLParserAfterOperator            = 24
	CCLParserYoungerOperator          = 25
	CCLParserOlderOperator            = 26
	CCLParserBooleanLiteral           = 27
	CCLParserTrue                     = 28
	CCLParserFalse                    = 29
	CCLParserIdentifier               = 30
	CCLParserIntNumber                = 31
	CCLParserFloatNumber              = 32
	CCLParserStringLiteral            = 33
	CCLParserWhitespace               = 34
)

// CCLParser rules.
const (
	CCLParserRULE_condition         = 0
	CCLParserRULE_assetType         = 1
	CCLParserRULE_simpleAssetType   = 2
	CCLParserRULE_filteredAssetType = 3
	CCLParserRULE_field             = 4
	CCLParserRULE_expression        = 5
	CCLParserRULE_simpleExpression  = 6
	CCLParserRULE_notExpression     = 7
	CCLParserRULE_isEmptyExpression = 8
	CCLParserRULE_comparison        = 9
	CCLParserRULE_binaryComparison  = 10
	CCLParserRULE_timeComparison    = 11
	CCLParserRULE_timeOperator      = 12
	CCLParserRULE_nowOperator       = 13
	CCLParserRULE_time              = 14
	CCLParserRULE_unit              = 15
	CCLParserRULE_inExpression      = 16
	CCLParserRULE_scope             = 17
	CCLParserRULE_withinExpression  = 18
	CCLParserRULE_value             = 19
	CCLParserRULE_operator          = 20
)

// IConditionContext is an interface to support dynamic dispatch.
type IConditionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsConditionContext differentiates from other interfaces.
	IsConditionContext()
}

type ConditionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyConditionContext() *ConditionContext {
	var p = new(ConditionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CCLParserRULE_condition
	return p
}

func (*ConditionContext) IsConditionContext() {}

func NewConditionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ConditionContext {
	var p = new(ConditionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CCLParserRULE_condition

	return p
}

func (s *ConditionContext) GetParser() antlr.Parser { return s.parser }

func (s *ConditionContext) AssetType() IAssetTypeContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAssetTypeContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAssetTypeContext)
}

func (s *ConditionContext) Expression() IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *ConditionContext) EOF() antlr.TerminalNode {
	return s.GetToken(CCLParserEOF, 0)
}

func (s *ConditionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ConditionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ConditionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCLListener); ok {
		listenerT.EnterCondition(s)
	}
}

func (s *ConditionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCLListener); ok {
		listenerT.ExitCondition(s)
	}
}

func (p *CCLParser) Condition() (localctx IConditionContext) {
	localctx = NewConditionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, CCLParserRULE_condition)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(42)
		p.AssetType()
	}
	{
		p.SetState(43)
		p.Match(CCLParserT__0)
	}
	{
		p.SetState(44)
		p.Expression()
	}
	{
		p.SetState(45)
		p.Match(CCLParserEOF)
	}

	return localctx
}

// IAssetTypeContext is an interface to support dynamic dispatch.
type IAssetTypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsAssetTypeContext differentiates from other interfaces.
	IsAssetTypeContext()
}

type AssetTypeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAssetTypeContext() *AssetTypeContext {
	var p = new(AssetTypeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CCLParserRULE_assetType
	return p
}

func (*AssetTypeContext) IsAssetTypeContext() {}

func NewAssetTypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AssetTypeContext {
	var p = new(AssetTypeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CCLParserRULE_assetType

	return p
}

func (s *AssetTypeContext) GetParser() antlr.Parser { return s.parser }

func (s *AssetTypeContext) SimpleAssetType() ISimpleAssetTypeContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISimpleAssetTypeContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISimpleAssetTypeContext)
}

func (s *AssetTypeContext) FilteredAssetType() IFilteredAssetTypeContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFilteredAssetTypeContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFilteredAssetTypeContext)
}

func (s *AssetTypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AssetTypeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *AssetTypeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCLListener); ok {
		listenerT.EnterAssetType(s)
	}
}

func (s *AssetTypeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCLListener); ok {
		listenerT.ExitAssetType(s)
	}
}

func (p *CCLParser) AssetType() (localctx IAssetTypeContext) {
	localctx = NewAssetTypeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, CCLParserRULE_assetType)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(49)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(47)
			p.SimpleAssetType()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(48)
			p.FilteredAssetType()
		}

	}

	return localctx
}

// ISimpleAssetTypeContext is an interface to support dynamic dispatch.
type ISimpleAssetTypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSimpleAssetTypeContext differentiates from other interfaces.
	IsSimpleAssetTypeContext()
}

type SimpleAssetTypeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySimpleAssetTypeContext() *SimpleAssetTypeContext {
	var p = new(SimpleAssetTypeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CCLParserRULE_simpleAssetType
	return p
}

func (*SimpleAssetTypeContext) IsSimpleAssetTypeContext() {}

func NewSimpleAssetTypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SimpleAssetTypeContext {
	var p = new(SimpleAssetTypeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CCLParserRULE_simpleAssetType

	return p
}

func (s *SimpleAssetTypeContext) GetParser() antlr.Parser { return s.parser }

func (s *SimpleAssetTypeContext) Field() IFieldContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFieldContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFieldContext)
}

func (s *SimpleAssetTypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SimpleAssetTypeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SimpleAssetTypeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCLListener); ok {
		listenerT.EnterSimpleAssetType(s)
	}
}

func (s *SimpleAssetTypeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCLListener); ok {
		listenerT.ExitSimpleAssetType(s)
	}
}

func (p *CCLParser) SimpleAssetType() (localctx ISimpleAssetTypeContext) {
	localctx = NewSimpleAssetTypeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, CCLParserRULE_simpleAssetType)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(51)
		p.Field()
	}

	return localctx
}

// IFilteredAssetTypeContext is an interface to support dynamic dispatch.
type IFilteredAssetTypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFilteredAssetTypeContext differentiates from other interfaces.
	IsFilteredAssetTypeContext()
}

type FilteredAssetTypeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFilteredAssetTypeContext() *FilteredAssetTypeContext {
	var p = new(FilteredAssetTypeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CCLParserRULE_filteredAssetType
	return p
}

func (*FilteredAssetTypeContext) IsFilteredAssetTypeContext() {}

func NewFilteredAssetTypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FilteredAssetTypeContext {
	var p = new(FilteredAssetTypeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CCLParserRULE_filteredAssetType

	return p
}

func (s *FilteredAssetTypeContext) GetParser() antlr.Parser { return s.parser }

func (s *FilteredAssetTypeContext) Field() IFieldContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFieldContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFieldContext)
}

func (s *FilteredAssetTypeContext) Expression() IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *FilteredAssetTypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FilteredAssetTypeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FilteredAssetTypeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCLListener); ok {
		listenerT.EnterFilteredAssetType(s)
	}
}

func (s *FilteredAssetTypeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCLListener); ok {
		listenerT.ExitFilteredAssetType(s)
	}
}

func (p *CCLParser) FilteredAssetType() (localctx IFilteredAssetTypeContext) {
	localctx = NewFilteredAssetTypeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, CCLParserRULE_filteredAssetType)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(53)
		p.Field()
	}
	{
		p.SetState(54)
		p.Match(CCLParserT__1)
	}
	{
		p.SetState(55)
		p.Expression()
	}

	return localctx
}

// IFieldContext is an interface to support dynamic dispatch.
type IFieldContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFieldContext differentiates from other interfaces.
	IsFieldContext()
}

type FieldContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFieldContext() *FieldContext {
	var p = new(FieldContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CCLParserRULE_field
	return p
}

func (*FieldContext) IsFieldContext() {}

func NewFieldContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FieldContext {
	var p = new(FieldContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CCLParserRULE_field

	return p
}

func (s *FieldContext) GetParser() antlr.Parser { return s.parser }

func (s *FieldContext) Identifier() antlr.TerminalNode {
	return s.GetToken(CCLParserIdentifier, 0)
}

func (s *FieldContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FieldContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FieldContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCLListener); ok {
		listenerT.EnterField(s)
	}
}

func (s *FieldContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCLListener); ok {
		listenerT.ExitField(s)
	}
}

func (p *CCLParser) Field() (localctx IFieldContext) {
	localctx = NewFieldContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, CCLParserRULE_field)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(57)
		p.Match(CCLParserIdentifier)
	}

	return localctx
}

// IExpressionContext is an interface to support dynamic dispatch.
type IExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsExpressionContext differentiates from other interfaces.
	IsExpressionContext()
}

type ExpressionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExpressionContext() *ExpressionContext {
	var p = new(ExpressionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CCLParserRULE_expression
	return p
}

func (*ExpressionContext) IsExpressionContext() {}

func NewExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExpressionContext {
	var p = new(ExpressionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CCLParserRULE_expression

	return p
}

func (s *ExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *ExpressionContext) SimpleExpression() ISimpleExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISimpleExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISimpleExpressionContext)
}

func (s *ExpressionContext) NotExpression() INotExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INotExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(INotExpressionContext)
}

func (s *ExpressionContext) InExpression() IInExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IInExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IInExpressionContext)
}

func (s *ExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ExpressionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCLListener); ok {
		listenerT.EnterExpression(s)
	}
}

func (s *ExpressionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCLListener); ok {
		listenerT.ExitExpression(s)
	}
}

func (p *CCLParser) Expression() (localctx IExpressionContext) {
	localctx = NewExpressionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, CCLParserRULE_expression)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(62)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(59)
			p.SimpleExpression()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(60)
			p.NotExpression()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(61)
			p.InExpression()
		}

	}

	return localctx
}

// ISimpleExpressionContext is an interface to support dynamic dispatch.
type ISimpleExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSimpleExpressionContext differentiates from other interfaces.
	IsSimpleExpressionContext()
}

type SimpleExpressionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySimpleExpressionContext() *SimpleExpressionContext {
	var p = new(SimpleExpressionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CCLParserRULE_simpleExpression
	return p
}

func (*SimpleExpressionContext) IsSimpleExpressionContext() {}

func NewSimpleExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SimpleExpressionContext {
	var p = new(SimpleExpressionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CCLParserRULE_simpleExpression

	return p
}

func (s *SimpleExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *SimpleExpressionContext) IsEmptyExpression() IIsEmptyExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIsEmptyExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IIsEmptyExpressionContext)
}

func (s *SimpleExpressionContext) WithinExpression() IWithinExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IWithinExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IWithinExpressionContext)
}

func (s *SimpleExpressionContext) Comparison() IComparisonContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IComparisonContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IComparisonContext)
}

func (s *SimpleExpressionContext) Expression() IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *SimpleExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SimpleExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SimpleExpressionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCLListener); ok {
		listenerT.EnterSimpleExpression(s)
	}
}

func (s *SimpleExpressionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCLListener); ok {
		listenerT.ExitSimpleExpression(s)
	}
}

func (p *CCLParser) SimpleExpression() (localctx ISimpleExpressionContext) {
	localctx = NewSimpleExpressionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, CCLParserRULE_simpleExpression)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(71)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(64)
			p.IsEmptyExpression()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(65)
			p.WithinExpression()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(66)
			p.Comparison()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(67)
			p.Match(CCLParserT__2)
		}
		{
			p.SetState(68)
			p.Expression()
		}
		{
			p.SetState(69)
			p.Match(CCLParserT__3)
		}

	}

	return localctx
}

// INotExpressionContext is an interface to support dynamic dispatch.
type INotExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsNotExpressionContext differentiates from other interfaces.
	IsNotExpressionContext()
}

type NotExpressionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNotExpressionContext() *NotExpressionContext {
	var p = new(NotExpressionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CCLParserRULE_notExpression
	return p
}

func (*NotExpressionContext) IsNotExpressionContext() {}

func NewNotExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NotExpressionContext {
	var p = new(NotExpressionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = CCLParserRULE_notExpression

	return p
}

func (s *NotExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *NotExpressionContext) Expression() IExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *NotExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NotExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NotExpressionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCLListener); ok {
		listenerT.EnterNotExpression(s)
	}
}

func (s *NotExpressionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(CCLListener); ok {
		listenerT.ExitNotExpression(s)
	}
}

func (p *CCLParser) NotExpression() (localctx INotExpressionContext) {
	localctx = NewNotExpressionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 14, CCLParserRULE_notExpression)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(73)
		p.Match(CCLParserT__4)
	}
	{
		p.SetState(74)
		p.Expression()
	}

	return localctx
}

// IIsEmptyExpressionContext is an interface to support dynamic dispatch.
type IIsEmptyExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsIsEmptyExpressionContext differentiates from other interfaces.
	IsIsEmptyExpressionContext()
}

type IsEmptyExpressionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyIsEmptyExpressionContext() *IsEmptyExpressionContext {
	var p = new(IsEmptyExpressionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = CCLParserRULE_isEmptyExpression
	return p
}

func (*IsEmptyExpressionContext) IsIsEmptyExpressionContext() {}
